# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema.define(version: 2022_04_29_164108) do
+ActiveRecord::Schema.define(version: 2022_05_01_092113) do
 
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
@@ -25,6 +25,16 @@ ActiveRecord::Schema.define(version: 2022_04_29_164108) do
     t.index ["category_id"], name: "index_accounts_payables_on_category_id"
   end
 
+  create_table "accounts_receivables", force: :cascade do |t|
+    t.money "amount", scale: 2
+    t.date "due_date"
+    t.string "description"
+    t.bigint "category_id", null: false
+    t.datetime "created_at", precision: 6, null: false
+    t.datetime "updated_at", precision: 6, null: false
+    t.index ["category_id"], name: "index_accounts_receivables_on_category_id"
+  end
+
   create_table "categories", force: :cascade do |t|
     t.string "description"
     t.datetime "created_at", precision: 6, null: false
@@ -32,4 +42,5 @@ ActiveRecord::Schema.define(version: 2022_04_29_164108) do
   end
 
   add_foreign_key "accounts_payables", "categories"
+  add_foreign_key "accounts_receivables", "categories"
 end
